crates/rspack_error/tests/fixtures/recoverable_syntax_error/fixtures__recoverable_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: recoverable_syntax_error
---
ModuleParseError

  × Module parse failed:
  ╰─▶   × TSX parsing error: Expected a semicolon
         ╭────
       1 │ let c = <test>() => {}</test>;
         ·                       ┬
         ·                       ╰── Expected a semicolon
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × TSX parsing error: Expression expected
         ╭────
       1 │ let c = <test>() => {}</test>;
         ·                        ┬
         ·                        ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

